@@ -1,4 +1,9 @@
-2003-09-day Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b87
+2003-09-23 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b88
+	
+	* Adding of new_password.php.  Part of the lost password 
+	  modification, and should have been added in b87,
+
+2003-09-23 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b87
 
 	* Vallimar's self registration patch, somewhat modified.
 	  If this option is enabled, users can create an account 
